syntax = "proto3";

package llm.optimizer.config;

import "common.proto";
import "google/protobuf/timestamp.proto";

// Configuration entry
message ConfigEntry {
  string key = 1;
  string value = 2;
  string type = 3;  // "string", "int", "float", "bool", "json"
  string description = 4;
  bool sensitive = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
  string updated_by = 8;
  map<string, string> metadata = 9;
}

// Configuration scope
enum ConfigScope {
  CONFIG_SCOPE_UNSPECIFIED = 0;
  CONFIG_SCOPE_GLOBAL = 1;
  CONFIG_SCOPE_SERVICE = 2;
  CONFIG_SCOPE_ENVIRONMENT = 3;
  CONFIG_SCOPE_USER = 4;
}

// Configuration version
message ConfigVersion {
  string version_id = 1;
  int32 version_number = 2;
  google.protobuf.Timestamp created_at = 3;
  string created_by = 4;
  string change_summary = 5;
  map<string, ConfigEntry> entries = 6;
}

// Service configuration
message ServiceConfig {
  string service_name = 1;
  string host = 2;
  int32 port = 3;
  common.DeploymentMode mode = 4;
  int64 optimization_interval_secs = 5;
  map<string, string> custom_settings = 6;
}

// Database configuration
message DatabaseConfig {
  string connection_string = 1;
  int32 max_connections = 2;
  int64 timeout_secs = 3;
  bool auto_migrate = 4;
}

// Integration configuration
message IntegrationConfig {
  string observatory_url = 1;
  string orchestrator_url = 2;
  repeated string sentinel_kafka_brokers = 3;
  string governance_url = 4;
  string registry_url = 5;
  map<string, string> custom_endpoints = 6;
}

// Observability configuration
message ObservabilityConfig {
  string log_level = 1;
  bool json_logging = 2;
  string metrics_endpoint = 3;
  string traces_endpoint = 4;
  int32 sampling_rate_pct = 5;
}

// Strategy configuration
message StrategyConfig {
  bool enable_ab_testing = 1;
  bool enable_reinforcement_learning = 2;
  bool enable_cost_optimization = 3;
  bool enable_adaptive_tuning = 4;
  double min_confidence_threshold = 5;
  int64 evaluation_window_secs = 6;
  map<string, string> strategy_params = 7;
}

// Complete optimizer configuration
message OptimizerConfig {
  ServiceConfig service = 1;
  DatabaseConfig database = 2;
  IntegrationConfig integrations = 3;
  ObservabilityConfig observability = 4;
  StrategyConfig strategies = 5;
  map<string, string> custom_config = 6;
}

// Get configuration request
message GetConfigRequest {
  string key = 1;
  ConfigScope scope = 2;
  string scope_id = 3;  // Service name, environment, etc.
}

// Get configuration response
message GetConfigResponse {
  ConfigEntry entry = 1;
  common.ApiResponse status = 2;
}

// Set configuration request
message SetConfigRequest {
  string key = 1;
  string value = 2;
  string type = 3;
  string description = 4;
  bool sensitive = 5;
  ConfigScope scope = 6;
  string scope_id = 7;
}

// Set configuration response
message SetConfigResponse {
  ConfigEntry entry = 1;
  common.ApiResponse status = 2;
}

// Delete configuration request
message DeleteConfigRequest {
  string key = 1;
  ConfigScope scope = 2;
  string scope_id = 3;
}

// Delete configuration response
message DeleteConfigResponse {
  common.ApiResponse status = 1;
}

// List configuration request
message ListConfigRequest {
  ConfigScope scope = 1;
  string scope_id = 2;
  string key_prefix = 3;
  common.PageRequest pagination = 4;
}

// List configuration response
message ListConfigResponse {
  repeated ConfigEntry entries = 1;
  common.PageResponse pagination = 2;
  common.ApiResponse status = 3;
}

// Get optimizer config request
message GetOptimizerConfigRequest {
  bool include_sensitive = 1;
}

// Get optimizer config response
message GetOptimizerConfigResponse {
  OptimizerConfig config = 1;
  common.ApiResponse status = 2;
}

// Update optimizer config request
message UpdateOptimizerConfigRequest {
  OptimizerConfig config = 1;
  bool validate_only = 2;
}

// Update optimizer config response
message UpdateOptimizerConfigResponse {
  OptimizerConfig config = 1;
  repeated string warnings = 2;
  common.ApiResponse status = 3;
}

// Validate config request
message ValidateConfigRequest {
  OptimizerConfig config = 1;
}

// Validate config response
message ValidateConfigResponse {
  bool valid = 1;
  repeated common.ErrorDetail errors = 2;
  repeated string warnings = 3;
  common.ApiResponse status = 4;
}

// Export configuration request
message ExportConfigRequest {
  ConfigScope scope = 1;
  string scope_id = 2;
  string format = 3;  // "json", "yaml", "toml"
  bool include_sensitive = 4;
}

// Export configuration response
message ExportConfigResponse {
  bytes config_data = 1;
  string format = 2;
  common.ApiResponse status = 3;
}

// Import configuration request
message ImportConfigRequest {
  bytes config_data = 1;
  string format = 2;
  ConfigScope scope = 3;
  string scope_id = 4;
  bool merge = 5;  // If true, merge with existing; if false, replace
}

// Import configuration response
message ImportConfigResponse {
  int32 imported_count = 1;
  int32 updated_count = 2;
  int32 failed_count = 3;
  repeated common.ErrorDetail errors = 4;
  common.ApiResponse status = 5;
}

// Get config version request
message GetConfigVersionRequest {
  string version_id = 1;
  ConfigScope scope = 2;
  string scope_id = 3;
}

// Get config version response
message GetConfigVersionResponse {
  ConfigVersion version = 1;
  common.ApiResponse status = 2;
}

// List config versions request
message ListConfigVersionsRequest {
  ConfigScope scope = 1;
  string scope_id = 2;
  common.PageRequest pagination = 3;
}

// List config versions response
message ListConfigVersionsResponse {
  repeated ConfigVersion versions = 1;
  common.PageResponse pagination = 2;
  common.ApiResponse status = 3;
}

// Revert to config version request
message RevertConfigVersionRequest {
  string version_id = 1;
  ConfigScope scope = 2;
  string scope_id = 3;
  string reason = 4;
}

// Revert to config version response
message RevertConfigVersionResponse {
  ConfigVersion version = 1;
  common.ApiResponse status = 2;
}

// Configuration change event (for streaming)
message ConfigChangeEvent {
  string key = 1;
  string old_value = 2;
  string new_value = 3;
  ConfigScope scope = 4;
  string scope_id = 5;
  google.protobuf.Timestamp timestamp = 6;
  string changed_by = 7;
  string change_reason = 8;
}

// Watch configuration request
message WatchConfigRequest {
  repeated string keys = 1;
  ConfigScope scope = 2;
  string scope_id = 3;
}

// Batch configuration update (client streaming)
message BatchConfigUpdate {
  string key = 1;
  string value = 2;
  string type = 3;
  ConfigScope scope = 4;
  string scope_id = 5;
}

// Batch configuration response
message BatchConfigResponse {
  int32 successful = 1;
  int32 failed = 2;
  repeated common.ErrorDetail errors = 3;
  common.ApiResponse status = 4;
}

// Configuration Service
service ConfigService {
  // Unary RPCs - Standard operations
  rpc GetConfig(GetConfigRequest) returns (GetConfigResponse);
  rpc SetConfig(SetConfigRequest) returns (SetConfigResponse);
  rpc DeleteConfig(DeleteConfigRequest) returns (DeleteConfigResponse);
  rpc ListConfig(ListConfigRequest) returns (ListConfigResponse);

  rpc GetOptimizerConfig(GetOptimizerConfigRequest) returns (GetOptimizerConfigResponse);
  rpc UpdateOptimizerConfig(UpdateOptimizerConfigRequest) returns (UpdateOptimizerConfigResponse);
  rpc ValidateConfig(ValidateConfigRequest) returns (ValidateConfigResponse);

  rpc ExportConfig(ExportConfigRequest) returns (ExportConfigResponse);
  rpc ImportConfig(ImportConfigRequest) returns (ImportConfigResponse);

  rpc GetConfigVersion(GetConfigVersionRequest) returns (GetConfigVersionResponse);
  rpc ListConfigVersions(ListConfigVersionsRequest) returns (ListConfigVersionsResponse);
  rpc RevertConfigVersion(RevertConfigVersionRequest) returns (RevertConfigVersionResponse);

  // Server streaming - Watch configuration changes
  rpc WatchConfig(WatchConfigRequest) returns (stream ConfigChangeEvent);

  // Client streaming - Batch configuration updates
  rpc BatchUpdateConfig(stream BatchConfigUpdate) returns (BatchConfigResponse);
}
